Lexer&Compiler/parse.py
import sys
from lex import *

# Parser object keeps track of current token and checks if the code matches the grammar
class Parser:
    def __init__(self, lexer):
        self.lexer = lexer

        self.symbols = set()    # Variables
        self.labelsDeclared = set() # Labels
        self.labelsGotoed = set()   # Labels goto'ed

        self.curToken = None
        self.peekToken = None
        self.nextToken()
        self.nextToken()    # Called twice to initialize current and peek

        self.numberline = 1

    # Return true if the current token matches
    def checkToken(self, kind):
        return kind == self.curToken.kind

    # Return true if the next token matches
    def checkPeek(self, kind):
        return kind == self.peekToken.kind
    
    # Try to match current token. If not, error. Advances the current token.
    def match(self, kind):
        if(not self.checkToken(kind)):
            self.abort("Expected " + kind.name + ", got " + self.curToken.kind.name + " at line: " + str(self.numberline + 1))
        self.nextToken()

    # Advances the current token
    def nextToken(self):
        self.curToken = self.peekToken
        self.peekToken = self.lexer.getToken()
        # No need to worry about passing the EOF, lexer handles that

    # Return true if the current token is a comparison operator
    def isComparisonOperator(self):
        return self.checkToken(TokenType.GT) or self.checkToken(TokenType.GTEQ) or self.checkToken(TokenType.LT) or self.checkToken(TokenType.LTEQ) or self.checkToken(TokenType.EQEQ) or self.checkToken(TokenType.NOTEQ)

    # Sends error to terminal
    def abort(self, message):
        sys.exit("Error. " + message)

    # Production Rules

    # program ::= {statement}
    def program(self):
        print("PROGRAM")
        
        # Since some newlines are required in our grammar, need to skip the excess
        while(self.checkToken(TokenType.NEWLINE)):
            self.nextToken()

        # Parse all the statements in the program
        while(not self.checkToken(TokenType.EOF)):
            self.statement()

        # Check that each label referenced in a GOTO is declared
        for label in self.labelsGotoed:
            if(label not in self.labelsDeclared):
                self.abort("Attempting to GOTO to undeclared label: " + label + " at line: " + str(self.numberline + 1))

    # One of the following statements
    def statement(self):
        # Check the first token to see what kind of statement this is

        # "PRINT" (expression | string)
        if(self.checkToken(TokenType.PRINT)):
            print("STATEMENT-PRINT")
            self.nextToken()

            if(self.checkToken(TokenType.STRING)):
                # Simple string
                self.nextToken()
            else:
                self.expression()

        # "IF" comparison "THEN" {statement} "ENDIF"
        elif(self.checkToken(TokenType.IF)):
            print("STATEMENT-IF")
            self.nextToken()
            self.comparison()

            self.match(TokenType.THEN)
            self.nl()
            
            #Zero or more statements in the body
            while(not self.checkToken(TokenType.ENDIF)):
                self.statement()
            
            self.match(TokenType.ENDIF)

        # WHILE comparison "REPEAT" {statement} "ENDWHILE"
        elif(self.checkToken(TokenType.WHILE)):
            print("STATEMENT-WHILE")
            self.nextToken()
            self.comparison()

            self.match(TokenType.REPEAT)
            self.nl()

            # Zero or more statements in the loop body
            while(not self.checkToken(TokenType.ENDWHILE)):
                self.statement()
            
            self.match(TokenType.ENDWHILE)

        # "LABEL" ident
        elif(self.checkToken(TokenType.LABEL)):
            print("STATEMENT-LABEL")
            self.nextToken()
            
            # Make sure this label doesn't exist already
            if(self.curToken.text in self.labelsDeclared):
                self.abort("Label arelady exists: " + self.curToken.text + " at line: " + str(self.numberline + 1))
            self.labelsDeclared.add(self.curToken.text)

            self.match(TokenType.IDENT)

        # "GOTO"
        elif(self.checkToken(TokenType.GOTO)):
            print("STATEMENT-GOTO")
            self.nextToken()
            self.labelsGotoed.add(self.curToken.text)
            self.match(TokenType.IDENT)

        # "LET" ident "=" expression
        elif(self.checkToken(TokenType.LET)):
            print("STATEMENT-LET")
            self.nextToken()

            # Check if ident exists in symbol table. If not, declare it
            if(self.curToken.text not in self.symbols):
                self.symbols.add(self.curToken.text)

            self.match(TokenType.IDENT)
            self.match(TokenType.EQ)

            self.expression()
        
        # "INPUT" ident
        elif(self.checkToken(TokenType.INPUT)):
            print("STATEMENT-INPUT")
            self.nextToken()

            # If variable doesn't exist already, delcare it
            if(self.curToken.text not in self.symbols):
                self.symbols.add(self.curToken.text)

            self.match(TokenType.IDENT)

        # This is not a valid statement, sends error
        else:
            self.abort("Invalid statement at " + self.curToken.text + " (" + self.curToken.kind.name + ")" + " at line: " + str(self.numberline + 1))

        # Newline
        self.nl()

    # comparison ::= expression (("==" | "!=" | ">" | ">=" | "<" | "<=") expression)+
    def comparison(self):
        print("COMPARISION")

        self.expression()
        # Must be at least one comparison and another expression
        if(self.isComparisonOperator()):
            self.nextToken()
            self.expression()
        else:
            self.abort("Expected comparison operator at: " + self.curToken.text + " at line: " + str(self.numberline + 1))
        
        # Can have 0 or more comparision operator and expressions
        while(self.isComparisonOperator()):
            self.nextToken()
            self.expression()

    # expression ::= term {( "-" | "+" ) term}
    def expression(self):
        print("EXPRESSION")

        self.term()
        # Can have 0 or more +/- and expressions
        while(self.checkToken(TokenType.PLUS) or self.checkToken(TokenType.MINUS)):
            self.nextToken()
            self.term()

    # term ::= unary {( "/" | "*" ) unary}
    def term(self):
        print("TERM")

        self.unary()
        # Can have 0 or more *// and experssions
        while(self.checkToken(TokenType.ASTERISK) or self.checkToken(TokenType.SLASH)):
            self.nextToken()
            self.unary()
    
    # unary ::= ["+" | "-"] primary
    def unary(self):
        print("UNARY")

        # Optional unary +/-
        if(self.checkToken(TokenType.PLUS) or self.checkToken(TokenType.MINUS)):
            self.nextToken()
        self.primary()

    # primary ::= number | ident
    def primary(self):
        print("PRIMARY (" + self.curToken.text + ")")

        if(self.checkToken(TokenType.NUMBER)):
            self.nextToken()
        elif(self.checkToken(TokenType.IDENT)):
            # Makes sure the variable exists already
            if(self.curToken.text not in self.symbols):
                self.abort("Referencing variable before assignment: " + self.curToken.text + " at line: " + str(self.numberline + 1))
            self.nextToken()
        else:
            # ERROR!
            self.abort("Unexpected token at " + self.curToken.text + " at line: " + str(self.numberline + 1))

    def nl(self):
        print("NEWLINE")

        # Require at least one newline
        self.match(TokenType.NEWLINE)
        # But we will allow extra newlines too, of course
        while(self.checkToken(TokenType.NEWLINE)):
            self.nextToken()
        self.numberline += 1